Reset provisioning to local testing

--- a/tests/system/provisioning/vars/elastic_nginx.yml
+++ b/tests/system/provisioning/vars/elastic_nginx.yml
@@ -4,22 +4,22 @@ elastic_version: 7.5.2
 
 ### Elastic API configuration
 
-elastic_api_protocol: https
+elastic_api_protocol: http
 elasticsearch_port: 9200
 
 ### Elastic cluster configuration
 
-elastic_user: elastic
-elastic_password: T3stP4ssw0rd--
+elastic_user: wazuh
+elastic_password: AMMFy5ZgUyGhkRwa
 
 ### Kibana API configuration
 
 # Privileged user is created with "elastic_user" and "elastic_password" credentials. ToDo: Add Kibana user with limited privileges
 # kibana_user: wazuh
-# kibana_password:
+# kibana_password: 
 kibana_api_protocol: https
 kibana_port: 5601
 
-### Nginx
+### Nginx 
 
 nginx_listen_port: 443
