--- a/tests/system/provisioning/launch_environment.yml
+++ b/tests/system/provisioning/launch_environment.yml
@@ -33,36 +33,30 @@
           - use_cases_actions.log
           - use_cases_tests.log
 
-      - name: Creating AWS Stack, generating configuration and host files
+      - name: Generating local hosts and configuration files
         shell: "ansible-playbook {{ item }}"
         with_items:
-          - "deploy_aws_stack.yml >> ./deployment_logs/log_{{ current_date_time }}/deploy.log"
-          - "generate_hosts_file.yml -i {{ hosts_classified_destination }} >> ./deployment_logs/log_{{ current_date_time }}/deploy.log"
+          # - "deploy_aws_stack.yml >> ./deployment_logs/log_{{ current_date_time }}/deploy.log"
+          # - "generate_hosts_file.yml -i {{ hosts_classified_destination }} >> ./deployment_logs/log_{{ current_date_time }}/deploy.log"
           - "setup_provisioning.yml -i {{ ansible_hosts_destination }} >> ./deployment_logs/log_{{ current_date_time }}/deploy.log"
           - "setup_instances.yml -i {{ ansible_hosts_destination }} >> ./deployment_logs/log_{{ current_date_time }}/deploy.log"
           # The elasticsearch[0] is the node which will generate certificates, it's a must to provision him first
           - "provision_playbook.yml -i {{ ansible_hosts_destination }} -l elasticsearch[0] >> ./deployment_logs/log_{{ current_date_time }}/elasticsearch_bootstrap.log"
-
-      - name: Deploying ES, Wazuh Managers and Kibana
+        environment:
+          ANSIBLE_HASH_BEHAVIOUR: merge
+ 
+      - name: Launching  installation tasks
         shell: "ansible-playbook provision_playbook.yml -i {{ ansible_hosts_destination }} {{ item }}"
-        async: 10000
-        poll: 0
+        register: installation_tasks
         with_items:
-          - -l elasticsearch[1:] >> ./deployment_logs/log_{{ current_date_time }}/elasticsearch.log
+          # - -l elasticsearch[1:] >> ./deployment_logs/log_{{ current_date_time }}/elasticsearch.log
           - -l masters >> ./deployment_logs/log_{{ current_date_time }}/masters.log
-          - -l workers >> ./deployment_logs/log_{{ current_date_time }}/workers.log
+          # - -l workers >> ./deployment_logs/log_{{ current_date_time }}/workers.log
           - -l kibana >> ./deployment_logs/log_{{ current_date_time }}/kibana.log
-        register: playbooks_run
+        environment:
+          ANSIBLE_HASH_BEHAVIOUR: merge          
 
-      - async_status:
-          jid: "{{ item.ansible_job_id }}"
-        loop: "{{ playbooks_run.results }}"
-        register: jobs
-        until: jobs.finished
-        retries: 1000
-        delay: 10
-
-      - name: Installing and registering agents and running post installation tasks
+      - name: Installing and registering agents
         shell: "ansible-playbook -i {{ ansible_hosts_destination }} {{ item }}"
         async: 10000
         poll: 0
@@ -70,6 +64,8 @@
           - provision_playbook.yml -l linuxagents >> ./deployment_logs/log_{{ current_date_time }}/linux_agents.log
           - provision_playbook.yml -l windowsagents >> ./deployment_logs/log_{{ current_date_time }}/windows_agents.log
         register: register_agents
+        environment:
+          ANSIBLE_HASH_BEHAVIOUR: merge
 
       - async_status:
           jid: "{{ item.ansible_job_id }}"
@@ -84,4 +80,5 @@
         register: post_installation
         with_items:
           - post_installation.yml >> ./deployment_logs/log_{{ current_date_time }}/post_installation.log
-
+        environment:
+          ANSIBLE_HASH_BEHAVIOUR: merge
