--- a/tests/system/provisioning/post_installation.yml
+++ b/tests/system/provisioning/post_installation.yml
@@ -12,14 +12,14 @@
     become_user: root
 
 # Configure Wazuh Groups and Kibana Welcome screen
-  - hosts: kibana, masters
-    strategy: free
-    vars_files:
-      - ./vars/wazuh_manager.yml
-      - ./vars/elastic_nginx.yml
-    tasks:
-      - import_tasks: ../provisioning/roles/provisioning/tasks/post_installation.yml
-    handlers:
-      - include: ../provisioning/roles/provisioning/handlers/main.yml
-    become: yes
-    become_user: root
+  # - hosts: kibana, masters
+  #   strategy: free
+  #   vars_files:
+  #     - ./vars/wazuh_manager.yml
+  #     - ./vars/elastic_nginx.yml
+  #   tasks:
+  #     - import_tasks: ../provisioning/roles/provisioning/tasks/post_installation.yml
+  #   handlers:
+  #     - include: ../provisioning/roles/provisioning/handlers/main.yml
+  #   become: yes
+  #   become_user: root
