--- a/tests/system/provisioning/roles/aws/tasks/configure_ssh.yml
+++ b/tests/system/provisioning/roles/aws/tasks/configure_ssh.yml
@@ -8,6 +8,7 @@
     user:
       name: "{{ ssh_username }}"
       group: "{{ ssh_username }}"
+      password: "{{ ssh_password | password_hash('sha512') }}" # "user" module requires password hashing
 
   - name: Ensure new user permissions on it's home folder
     file:
@@ -28,15 +29,21 @@
       regexp: "{{ ssh_username }}.*"
       line: "{{ ssh_username }} ALL=(ALL)NOPASSWD:ALL"
 
-  - name: Insert pytest key in the authorized_keys file
-    authorized_key:
-      user: "{{ ssh_username }}"
-      key: "{{ lookup('file', '{{ ssh_key_path_public }}') }}"
-      state: present
+  # - name: Insert pytest key in the authorized_keys file
+  #   authorized_key:
+  #     user: "{{ ssh_username }}"
+  #     key: "{{ lookup('file', '{{ ssh_key_path_public }}') }}"
+  #     state: present
 
   - name: Insert custom SSH key in authorized_keys_file
     authorized_key:
       user: "{{ ssh_username }}"
       key: "{{ custom_ssh_key }}"
       state: present
-
+  
+  - name: Enable Password Authentication on SSH configuration
+    lineinfile:
+      path: "/etc/ssh/sshd_config"
+      regexp: "PasswordAuthentication no"
+      line: "PasswordAuthentication yes"
+    notify: "restart sshd service"
