--- a/tests/system/provisioning/vars/credentials.yml
+++ b/tests/system/provisioning/vars/credentials.yml
@@ -1,5 +1,16 @@
 ### Ansible connection vars
-ssh_username: jenkins
-key_pair_name: Jenkins
+ssh_username: wazuh
+ssh_password: AMMFy5ZgUyGhkRwa
+key_pair_name: devops-dev
+
+ssh_key_path_private: ~/.ssh/devops-dev.pem
+ssh_key_path_public: ~/.ssh/devops-dev.pub
+
+custom_ssh_key: ""
 
 windows_user: Administrator
+windows_password: ""
+
+hosts_classified_destination: "./ec2_demo_hosts_classified"
+ansible_hosts_destination: "./dev_hosts"
+ansible_ssh_config_destination: "./ec2_demo_config"
