--- a/tests/integration/test_fim/test_basic_usage/data/wazuh_conf_frequency.yaml
+++ b/tests/integration/test_fim/test_basic_usage/data/wazuh_conf_frequency.yaml
@@ -4,14 +4,15 @@
   - ossec_conf
   apply_to_modules:
   - test_basic_usage_new_dirs
-  section: syscheck
-  elements:
-  - disabled:
-      value: 'no'
-  - frequency:
-      value: FREQUENCY
-  - directories:
-      value: TEST_DIRECTORIES
-      attributes:
-      - check_all: 'yes'
-      - FIM_MODE
+  sections:
+  - section: syscheck
+    elements:
+    - disabled:
+        value: 'no'
+    - frequency:
+        value: FREQUENCY
+    - directories:
+        value: TEST_DIRECTORIES
+        attributes:
+        - check_all: 'yes'
+        - FIM_MODE
