--- a/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
+++ b/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
@@ -5,6 +5,8 @@
   sections:
   - section: localfile
     elements:
+    - command:
+        - COMMAND
     - location:
         value: LOCATION
     -  log_format:
