--- a/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
+++ b/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
@@ -6,7 +6,7 @@
   - section: localfile
     elements:
     - command:
-        - COMMAND
+        value: COMMAND
     - location:
         value: LOCATION
     -  log_format:
