Add new monitoring tools #1134: - plot.py: Script to plot manager evps - truncate.sh: Script to truncate alerts.* in the wazuh-manager - Update launcher script to generate automatically manager evps plots - Update ansible playbooks to add truncate logs stage

--- a/deps/wazuh_testing/wazuh_testing/tools/performance_monitoring/ansible/agent.yaml
+++ b/deps/wazuh_testing/wazuh_testing/tools/performance_monitoring/ansible/agent.yaml
@@ -5,7 +5,7 @@
   become: True
   tasks:
 
-    - name: Launch agent monitor
+    - name: Launch agent event generator and monitor
       command: "python3 /home/ec2-user/app_monitor.py -a {{ manager_address }} -t {{ monitoring_time }} -v -n {{ agents_number }} -e {{ eps }} -m {{ measurement_time }} -p {{ protocol }} -f {{ output_csv_name }}"
 
     - name: Fetching results
