--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-configobj==5.0.6
+bcrypt==3.2.0; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
 certifi==2020.12.5
 cffi>=1.14.0; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
+configobj==5.0.6
+cryptography==3.3.2; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
 cycler>=0.10; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
-bcrypt==3.2.0; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
 distro==1.3.0
 filetype==1.0.7
 freezegun==0.3.15
-grpcio>=1.27.2; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
 google-cloud-pubsub==2.3.0; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
+grpcio>=1.27.2; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
+jq==1.1.2; platform_system == "Linux" or platform_system == "MacOS"
 jsonschema==3.2.0
 kiwisolver>=1.0.1; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
 lockfile==0.12.2
@@ -15,17 +17,15 @@ matplotlib>=3.3.4; platform_system == "Linux" or platform_system == "MacOS" or p
 netifaces==0.10.9
 numpydoc==0.9.2
 pandas>=1.1.5
-paramiko==2.7.1
+paramiko==2.7.1; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
 pillow>=6.2.0; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
 psutil==5.6.6
 pycryptodome==3.9.8
-pyOpenSSL==19.1.0
+pyOpenSSL==19.1.0; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
 pytest-html==2.0.1
 pytest==6.2.2
 pyyaml==5.3
 requests==2.23.0
 scipy>=1.0; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
 seaborn>=0.11.1; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
-testinfra==5.0.0
-jq==1.1.2; platform_system == "Linux" or platform_system == "MacOS"
-cryptography==3.3.2; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
+testinfra==5.0.0; platform_system == "Linux" or platform_system == "MacOS" or platform_system=='Windows'
