--- a/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
+++ b/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
@@ -33,8 +33,6 @@
     elements:
     - command:
         value: COMMAND
-    - location:
-        value: LOCATION
     - log_format:
         value: LOG_FORMAT
     - alias:
@@ -104,7 +102,7 @@
     - location:
         value: LOCATION
     - log_format:
-         value: LOG_FORMAT
+         value: 'syslog'
     - age:
          value: AGE
 
