--- a/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
+++ b/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
@@ -156,7 +156,7 @@
   - section: localfile
     elements:
     - location:
-        value: "/tmp/file.log"
+        value: LOCATION
     - log_format:
          value: "json"
     - label:
