--- a/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
+++ b/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
@@ -102,7 +102,7 @@
     - location:
         value: LOCATION
     - log_format:
-         value: 'syslog'
+         value: LOG_FORMAT
     - age:
          value: AGE
 
