Moved wildcards testing to a new file and added a new .yml conf file for the test

--- a/tests/integration/test_fim/test_files/test_basic_usage/data/wazuh_conf_wildcards.yml
+++ b/tests/integration/test_fim/test_files/test_basic_usage/data/wazuh_conf_wildcards.yml
@@ -1,16 +1,15 @@
----
 # conf 1
 - tags:
-  - ossec_conf
+  - ossec_conf_wildcards_start
   apply_to_modules:
-  - MODULE_NAME
+  - test_basic_usage_wildcards
   sections:
   - section: syscheck
     elements:
     - disabled:
         value: 'no'
     - directories:
-        value: TEST_DIRECTORIES
+        value: TEST_WILDCARDS_START
         attributes:
         - check_all: 'yes'
         - FIM_MODE
