Parameters and configuration options refactored and added more specific wildcards use cases

--- a/tests/integration/test_fim/test_files/test_basic_usage/data/wazuh_conf_wildcards.yml
+++ b/tests/integration/test_fim/test_files/test_basic_usage/data/wazuh_conf_wildcards.yml
@@ -1,6 +1,6 @@
 # conf 1
 - tags:
-  - ossec_conf_wildcards_start
+  - ossec_conf_wildcards
   apply_to_modules:
   - test_basic_usage_wildcards
   sections:
@@ -9,7 +9,6 @@
     - disabled:
         value: 'no'
     - directories:
-        value: TEST_WILDCARDS_START
+        value: TEST_WILDCARDS
         attributes:
         - check_all: 'yes'
-        - FIM_MODE
