--- a/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
+++ b/tests/integration/test_logcollector/test_configuration/data/wazuh_basic_configuration.yaml
@@ -53,6 +53,20 @@
         value: IGNORE_BINARIES
 
 - tags:
+  - test_basic_configuration_reconnect_time
+  apply_to_modules:
+  - test_basic_configuration_reconnect_time
+  sections:
+  - section: localfile
+    elements:
+    - location:
+        value: LOCATION
+    - log_format:
+         value: LOG_FORMAT
+    - reconnect_time:
+         value: RECONNECT_TIME
+
+- tags:
   - test_basic_configuration_only_future_events
   apply_to_modules:
   - test_basic_configuration_only_future_events
